fix Nabla font issues on ios devices

--- a/styles/MainPage.module.css
+++ b/styles/MainPage.module.css
@@ -1,17 +1,7 @@
 .wrapper {
   height: calc(100vh - 56px);
   background-color: hsla(0, 100%, 50%, 1);
-  background-image: radial-gradient(
-      at 40% 20%,
-      hsla(28, 100%, 74%, 1) 0px,
-      transparent 50%
-    ),
-    radial-gradient(at 80% 0%, hsla(189, 100%, 56%, 1) 0px, transparent 50%),
-    radial-gradient(at 0% 50%, hsla(355, 100%, 93%, 1) 0px, transparent 50%),
-    radial-gradient(at 80% 50%, hsla(340, 100%, 76%, 1) 0px, transparent 50%),
-    radial-gradient(at 0% 100%, hsla(22, 100%, 77%, 1) 0px, transparent 50%),
-    radial-gradient(at 80% 100%, hsla(242, 100%, 70%, 1) 0px, transparent 50%),
-    radial-gradient(at 0% 0%, hsla(343, 100%, 76%, 1) 0px, transparent 50%);
+  background-image: var(--radial-gradient);
 }
 
 .wrapper,
@@ -67,7 +57,7 @@
 
 .container span > span:last-child {
   position: absolute;
-  background-image: url("../public/middle.svg");
+  background-image: url("../public/zap.svg");
   width: 5rem;
   height: 5rem;
   opacity: 0;
@@ -89,5 +79,13 @@
 @media (max-width: 700px) {
   .container > span {
     display: none;
+  }
+}
+
+@media (max-width: 600px) {
+  .container a {
+    font-family: var(--font-header);
+    color: var(--color-brand-yellow-saturated);
+    text-shadow: 5px 5px var(--color-brand-dark);
   }
 }
